--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.717</string>
-    <string name="version">Версия: 1.717</string>
+    <string name="version_code">1.718</string>
+    <string name="version">Версия: 1.718</string>
 
     <string name="app_name">Такси Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -310,6 +310,6 @@
     <string name="my_name">Андрей Коржов</string>
     <string name="conf">Конфеденциальность</string>
     <string name="author_about">Об авторе</string>
-    <string name="foreign_countries">не в Украине</string>
+    <string name="foreign_countries">другое</string>
     <string name="order_in">"заказ в "</string>
 </resources>
