--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.717</string>
-    <string name="version">Версія: 1.717</string>
+    <string name="version_code">1.718</string>
+    <string name="version">Версія: 1.718</string>
 
     <string name="app_name">Таксі Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -310,6 +310,6 @@
     <string name="my_name">Андрій Коржов</string>
     <string name="conf">Конфіденційність</string>
     <string name="author_about">Про автора</string>
-    <string name="foreign_countries">не в Україні</string>
+    <string name="foreign_countries">інше</string>
     <string name="order_in">"заказ в "</string>
 </resources>
