--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.724</string>
-    <string name="version">Версія: 1.724</string>
+    <string name="version_code">1.725</string>
+    <string name="version">Версія: 1.725</string>
 
     <string name="app_name">Таксі Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -97,7 +97,7 @@
     <string name="address_error_message">Помилка введення адреси</string>
 
     <string name="BAGGAGE">Завантаження салону</string>
-    <string name="ANIMAL">Тварина</string>,
+    <string name="ANIMAL">Тварина</string>
     <string name="CONDIT">Кондиціонер</string>
     <string name="MEET">Зустріч з табличкою</string>
     <string name="COURIER">Кур\'єр. доставка</string>
@@ -313,4 +313,7 @@
     <string name="foreign_countries">інше</string>
     <string name="order_in">"заказ в "</string>
     <string name="checking">Чекайте, йде перевірка даних.</string>
+    <string name="time_out_text">Скасування поїздки по таймауту оплати. Спробуйте ще.</string>
+    <string name="pay_cancel">Поїздку скасовано через відсутність оплати. Спробуйте ще.</string>
+    <string name="ex_st_canceled">Заказ скасовано. Спробуйте ще.</string>
 </resources>
