--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.725</string>
-    <string name="version">Версия: 1.725</string>
+    <string name="version_code">1.728</string>
+    <string name="version">Версия: 1.728</string>
 
     <string name="app_name">Такси Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -316,4 +316,7 @@
     <string name="time_out_text">Отмена поездки по таймауту оплаты. Попробуйте еще.</string>
     <string name="pay_cancel">Поездка отменена  через отсутствие оплаты. Попробуйте еще.</string>
     <string name="ex_st_canceled">Заказ снят. Поробуйте еще.</string>
+    <string name="search">Поиск адреса ...</string>
+    <string name="account_verify">Идет проверка регистрации...</string>
+    <string name="city_search">Определяется Ваше местоположение...</string>
 </resources>
