--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -310,7 +310,7 @@
     <string name="my_name">Андрей Коржов</string>
     <string name="conf">Конфеденциальность</string>
     <string name="author_about">Об авторе</string>
-    <string name="foreign_countries">другое</string>
+    <string name="foreign_countries">Другое</string>
     <string name="order_in">"заказ в "</string>
     <string name="checking">Ожидайте, идет проверка данных ...</string>
     <string name="time_out_text">Отмена поездки по таймауту оплаты. Попробуйте еще.</string>
