--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.733</string>
-    <string name="version">Версія: 1.733</string>
+    <string name="version_code">1.734</string>
+    <string name="version">Версія: 1.734</string>
 
     <string name="app_name">Таксі Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -330,4 +330,5 @@
     <string name="update_ok">У Вас встановлена актуальна версія. Немає необхідності оновлювати програму.</string>
     <string name="phone_driver">Звонок водію</string>
     <string name="auto_info">, авто</string>
+    <string name="city_no_cards">Оплата банківськими картками недоступна у цьому населеному пункті. Ми повідомимо Вас коли оплата банківськими картками стане доступною.</string>
 </resources>
