--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.733</string>
-    <string name="version">Версия: 1.733</string>
+    <string name="version_code">1.734</string>
+    <string name="version">Версия: 1.734</string>
 
     <string name="app_name">Такси Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -330,4 +330,5 @@
     <string name="update_ok">У Вас установлена актуальная версия. Нет необходимости обновлять приложение.</string>
     <string name="phone_driver">Звонок водителю</string>
     <string name="auto_info">, авто</string>
+    <string name="city_no_cards">Оплата банковскими картами недоступна в этом населенном пункте. Мы уведомим Вас когда оплата банковскими картами станет доступной.</string>
 </resources>
