--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.740</string>
-    <string name="version">Версія: 1.740</string>
+    <string name="version_code">1.741</string>
+    <string name="version">Версія: 1.741</string>
 
     <string name="app_name">Таксі Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
@@ -339,6 +339,8 @@
     <string name="cancel_gps">Скасувати</string>
     <string name="ok_error">Зрозуміло</string>
     <string name="to_nal_payment">Оплата вибраним методом на даний момент неможлива. Замовити з оплатою готівкою?</string>
+    <string name="to_nal_payment_count">Оплата вибраним методом на даний момент неможлива. Розрахувати поїздку з оплатою готівкою?</string>
     <string name="tarif">Тариф:</string>
     <string name="tar">Тариф</string>
+    <string name="double_order_error">Дублювання замовлення. Ви не можете створювати подібне замовлення, поки не знайшлася машина на попереднє замовлення</string>
 </resources>
