--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="application">PAS1</string>
 
-    <string name="version_code">1.740</string>
-    <string name="version">Версия: 1.740</string>
+    <string name="version_code">1.741</string>
+    <string name="version">Версия: 1.741</string>
 
-    <string name="app_name">Taxi Light</string>
+    <string name="app_name">Такси Лайт</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
     <string name="back4app_app_id">01YGF894m3NJRXT1BlH6qPo9pUfDlG9sqi9K9mIL</string>
     <string name="back4app_client_key">T5f5GuT1UCmaiJn8Dek3sVmayGuJa2jfelQR6V6f</string>
@@ -339,5 +339,9 @@
     <string name="cancel_gps">Отменить</string>
     <string name="ok_error">Понятно</string>
     <string name="to_nal_payment">Оплата выбранным методом в данный момент невозможна. Заказать с оплатой наличными?</string>
+    <string name="to_nal_payment_count">Оплата выбранным методом в данный момент невозможна. Расчитать поездку с оплатой наличными?</string>
     <string name="tarif">Тариф:</string>
-    <string name="tar">Тариф</string></resources>
+    <string name="tar">Тариф</string>
+    <string name="double_order_error">Дублирование заказа. Вы не можете создавать подобный заказ, пока не нашлась машина на предыдущий заказ</string>
+
+</resources>
