--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,7 @@
     <string name="version_code">1.744</string>
     <string name="version">Version: 1.744</string>
 
-    <string name="app_name">Taxi Delivery</string>
+    <string name="app_name">Taxi Dostavka</string>
     <string name="back4app_server_url">https://parseapi.back4app.com/</string>
     <string name="back4app_app_id">01YGF894m3NJRXT1BlH6qPo9pUfDlG9sqi9K9mIL</string>
     <string name="back4app_client_key">T5f5GuT1UCmaiJn8Dek3sVmayGuJa2jfelQR6V6f</string>
